Added Words component.

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	<link rel='shortcut icon' href='%PUBLIC_URL%/favicon.ico' />
 	<meta name='viewport' content='width=device-width, initial-scale=1' />
 	<title>The most used word app!</title>
+	<script src='https://kit.fontawesome.com/df8eec99a2.js' async></script>
 </head>
 
 <body>
